增加更自动化的打包过程，现在只需要package即可完成打包